<resources>
    <string name="app_name">NautilusLibrary</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Todos os Gêneros</string>
    <string name="menu_gallery">Terror</string>
    <string name="menu_slideshow">Auto Ajuda</string>
    <string name="confirmar_exclusao">Confirme exclusão</string>
    <string name="quer_mesmo_apagar">Você realmente quer apagar esse registro?</string>
    <string name="intent_type">image/*</string>
    <string name="select_image">Selecionar imagem</string>

    <string name="terror">Terror</string>
    <string name="romance">Romance</string>
    <string name="ficcao_cientifica">Ficção Científica</string>
    <string name="policial">Policial</string>
    <string name="auto_ajuda">Auto Ajuda</string>
    <string name="tecnico">Técnico</string>
    <string name="infantil">Infantil</string>
</resources>